# actix-alerting-email

./: .env_sample  .gitignore  Cargo.toml  README.md
.github/workflows/: testing.yml
scripts/mailer/: index.js  package.json
src/: config.rs  lib.rs  main.rs
src/email/: mod.rs
src/ping/: mod.rs
tests/: integration_tests.rs
