[package]
name = "grafana-alerting-email"
version = "0.0.1"
authors = ["Bodo Hugo Barwich <b.barwich@hotmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
futures = "0.1.29"
futures-core = "0.3.8"
futures-util = "0.3.17"
mime = "0.3.9"
log = "0.4"
env_logger = "0.7"
anyhow = "1.0.31"
ctrlc = "3.1.7"
signal-hook = "0.1.13"
crossbeam-channel = "0.4.4"
serde = { version = "1.0.41", features = ["derive"] }
serde_json = "1.0.41"
json = "0.12.0"

[profile.release]
codegen-units = 1
lto = true
