[package]
name = "grafana-alerting-email"
version = "0.0.1"
authors = ["Bodo Hugo Barwich <b.barwich@hotmail.com>"]
edition = "2018"

[dependencies]
actix = "=0.10"
actix-web = "3"
tokio = "=0.1.14"
futures = "=0.1.29"
futures-core = "=0.3.11"
futures-util = "*"
mime = "0.3.9"
log = "0.4"
env_logger = "0.7"
anyhow = "1.0.31"
failure = "=0.1.7"
serde = { version = "1.0.41", features = ["derive"] }
serde_json = "1.0.41"
json = "0.12.0"
redis = "*"

[profile.release]
codegen-units = 1
lto = true
